# fairdicegame

./: .gitignore
fairdicegame/: CMakeLists.txt
fairdicegame/abi/: fairdicegame.abi
fairdicegame/include/: fairdicegame.hpp  types.hpp  utils.hpp
fairdicegame/src/: fairdicegame.cpp
fairdicelogs/: CMakeLists.txt
fairdicelogs/abi/: fairdicelogs.abi
fairdicelogs/include/: fairdicelogs.hpp
